external-crates/move/crates/move-compiler/tests/development/signed_ints/invalid/signed_int_literal_too_large_i8.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E01006]: invalid number literal
  ┌─ tests/development/signed_ints/invalid/signed_int_literal_too_large_i8.move:3:9
  │
3 │         128i8;
  │         ^^^^^ Invalid number literal. This literal does not fit into the type 'i8'

error[E01006]: invalid number literal
  ┌─ tests/development/signed_ints/invalid/signed_int_literal_too_large_i8.move:4:22
  │
4 │         let _x: i8 = 200i8;
  │                      ^^^^^ Invalid number literal. This literal does not fit into the type 'i8'

error[E01006]: invalid number literal
  ┌─ tests/development/signed_ints/invalid/signed_int_literal_too_large_i8.move:5:10
  │
5 │         -129i8;
  │          ^^^^^ Invalid number literal. This literal does not fit into the type 'i8'
